[HW-3]: add friendship gRPC service
